--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,6 +12,9 @@ body {
 .hero {
     background-image: url(/assets/images/hero.jpg);
     height: 100vh;
+    /* background-position: center; */
+    background-size: cover;
+    opacity: 0.9;
 }
 
 .tarseelat-heading {
