--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -22,6 +22,7 @@ body {
     font-weight: 700;
     letter-spacing: 2px;
     padding-top: 100px !important;
+    color: white;
 }
 
 .btn-know-more {
