--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -25,6 +25,16 @@ body {
     color: white;
 }
 
+.tarseelat-heading::before {
+    content: "JUBL";
+    color: red;
+  }
+
+  .tarseelat-heading::after {
+    content: " ALQALM";
+    color: blue;
+  }
+
 .btn-know-more {
     background-image: linear-gradient(243deg,#3D72E7 0%,#76b1f9 100%);
     font-size: 12px;
