--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,7 +14,7 @@ body {
     height: 100vh;
     /* background-position: center; */
     background-size: cover;
-    opacity: 0.9;
+    /* opacity: 0.7; */
 }
 
 .tarseelat-heading {
