--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,7 +10,7 @@ body {
 }
 
 .hero {
-    background-image: url(/assets/images/hero.jpg);
+    background-image: url(/assets/images/hero.png);
     height: 100vh;
     /* background-position: center; */
     background-size: cover;
