--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,6 +9,11 @@ body {
     font-family: 'Open Sans', sans-serif;
 }
 
+.logo {
+    height: 50px;
+    width: 230px;
+}
+
 .hero {
     background-image: url(/assets/images/hero.png);
     height: 100vh;
