--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,6 +14,10 @@ body {
     width: 230px;
 }
 
+.mbl-logo {
+    display: none;
+}
+
 .hero {
     background-image: url(/assets/images/hero.png);
     height: 100vh;
@@ -186,8 +190,14 @@ body {
     }
 
     .logo {
-        height: 50px;
-        width: 200px;
+        display: none;
     }
+
+    .mbl-logo {
+        display: block;
+        height: 50px;
+        width: 50px;
+    }
+   
 
  }
