--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -179,6 +179,9 @@ body {
     width: 80px;
 }
 
+
+
+
 /* // Small devices (landscape phones, less than 768px) */
 @media (max-width: 767.98px) { 
     .hero {
@@ -202,4 +205,17 @@ body {
     }
    
 
+ }
+
+ /* // Medium devices (tablets, less than 992px) */
+@media (max-width: 991.98px) { 
+    .hero {
+        background-image: url(/assets/images/hero.png);
+        height: 95vh;
+        background-position: center !important;
+    }
+    .tarseelat-heading {
+        font-size: 60px !important;
+        padding-top: 500px !important;
+    }
  }
