--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -43,6 +43,33 @@ body {
     content: " ALQALM";
     color: rgb(255, 2, 103);
   }
+  #go-top-btn {
+    position: fixed;
+    bottom: 20px;
+    right: 25px;
+    display: none;
+    justify-content: center;
+    align-items: center;
+    height: 50px;
+    width: 50px;
+    border-radius: 50%;
+    border: none;
+    background-color: var(--blue-color);
+    transition: transform 0.4s ease-in-out, opacity 0.4s ease-in-out;
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px,
+                rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
+    z-index: 999;
+    cursor: pointer;
+}
+
+#go-top-btn i {
+    color: #fff;
+    font-size: 25px;
+}
+
+#go-to-top:hover {
+    transform: scale(4);
+}
 
 .btn-know-more {
     background-image: linear-gradient(243deg,#3D72E7 0%,#76b1f9 100%);
