--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -206,6 +206,20 @@ body {
     width: 80px;
 }
 
+/* // Large devices (desktops, less than 1200px) */
+@media (max-width: 1199.98px) { 
+    .hero {
+        background-image: url(/assets/images/hero.png);
+        height: 95vh;
+        background-position: center !important;
+    }
+    .tarseelat-heading {
+        font-size: 60px !important;
+        padding-top: 500px !important;
+    }
+ }
+
+
 /* // Small devices (landscape phones, less than 768px) */
 @media (max-width: 767.98px) { 
     .hero {
