--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,247 +1,237 @@
-
 /* @import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap'); */
 
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans&display=swap");
 
 body {
-    margin: 0%;
-    padding: 0%;
-    font-family: 'Open Sans', sans-serif;
+  margin: 0%;
+  padding: 0%;
+  font-family: "Open Sans", sans-serif;
 }
 
 .logo {
-    height: 50px;
-    width: 230px;
+  height: 50px;
+  width: 230px;
 }
 
 .mbl-logo {
-    display: none;
+  display: none;
 }
 
 .hero {
-    background-image: url(/assets/images/hero.png);
-    height: 100vh;
-    /* background-position: center; */
-    background-size: cover;
-    /* opacity: 0.7; */
+  background-image: url(/assets/images/hero.png);
+  height: 100vh;
+  /* background-position: center; */
+  background-size: cover;
+  /* opacity: 0.7; */
 }
 
 .tarseelat-heading {
-    font-size: 80px !important;
-    font-weight: 700;
-    letter-spacing: 2px;
-    padding-top: 100px !important;
-    color: white;
+  font-size: 80px !important;
+  font-weight: 700;
+  letter-spacing: 2px;
+  padding-top: 150px !important;
+  color: white;
 }
 
 .tarseelat-heading::before {
-    content: "JUBL";
-    color: #52b8e7;
-  }
+  content: "JUBL";
+  color: #52b8e7;
+}
 
-  .tarseelat-heading::after {
-    content: " ALQALM";
-    color: rgb(255, 2, 103);
-  }
-  #go-top-btn {
-    position: fixed;
-    bottom: 20px;
-    right: 25px;
-    display: none;
-    justify-content: center;
-    align-items: center;
-    height: 50px;
-    width: 50px;
-    border-radius: 50%;
-    border: none;
-    background-color: var(--blue-color);
-    transition: transform 0.4s ease-in-out, opacity 0.4s ease-in-out;
-    box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px,
-                rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
-    z-index: 999;
-    cursor: pointer;
+.tarseelat-heading::after {
+  content: " ALQALM";
+  color: rgb(255, 2, 103);
+}
+
+#go-top-btn {
+  position: fixed;
+  bottom: 20px;
+  right: 25px;
+  display: none;
+  justify-content: center;
+  align-items: center;
+  height: 50px;
+  width: 50px;
+  border-radius: 50%;
+  border: none;
+  background-color: var(--blue-color);
+  transition: transform 0.4s ease-in-out, opacity 0.4s ease-in-out;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px,
+    rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
+  z-index: 999;
+  cursor: pointer;
 }
 
 #go-top-btn i {
-    color: #fff;
-    font-size: 25px;
-}
-
-#go-to-top:hover {
-    transform: scale(4);
+  color: #fff;
+  font-size: 25px;
 }
 
 .btn-know-more {
-    background-image: linear-gradient(243deg,#3D72E7 0%,#76b1f9 100%);
-    font-size: 12px;
-    letter-spacing: 1px;
-    padding: 15px 30px;
+  background-image: linear-gradient(243deg, #3d72e7 0%, #76b1f9 100%);
+  font-size: 12px;
+  letter-spacing: 1px;
+  padding: 15px 30px;
 }
 
 .border-img {
-    border-radius: 15px;
+  border-radius: 15px;
 }
 
 .services {
-    background-color: #F8FBFE;
+  background-color: #f8fbfe;
 }
 
 .services-1 {
-    border-top: 6px solid #1E1584;
-    transition: 0.3s;
+  border-top: 6px solid #1e1584;
+  transition: 0.3s;
 }
 
 .services-1:hover {
-    border-top: 6px solid #1E1584;
-    transform: scale(1.03);
-    cursor: pointer;
+  border-top: 6px solid #1e1584;
+  transform: scale(1.03);
+  cursor: pointer;
 }
 
 .services-1 img {
-    height: 100px;
-    width: 100px;
+  height: 100px;
+  width: 100px;
 }
 
 .services-2 {
-    border-top: 6px solid #3D72E7;
-    transition: 0.3s;
+  border-top: 6px solid #3d72e7;
+  transition: 0.3s;
 }
 
 .services-2:hover {
-    transform: scale(1.03);
-    cursor: pointer;
+  transform: scale(1.03);
+  cursor: pointer;
 }
 
-
-
 .services-2 img {
-    height: 100px;
-    width: 100px;
+  height: 100px;
+  width: 100px;
 }
 
 .services-3 {
-    border-top: 6px solid #B030DB;
-    transition: 0.3s;
+  border-top: 6px solid #b030db;
+  transition: 0.3s;
 }
 
 .services-3 img {
-    height: 100px;
-    width: 100px;
+  height: 100px;
+  width: 100px;
 }
 
 .services-3:hover {
-    transform: scale(1.03);
-    cursor: pointer;
+  transform: scale(1.03);
+  cursor: pointer;
 }
 
 .services-4 {
-    border-top: 6px solid #B030DB;
-    transition: 0.3s;
+  border-top: 6px solid #b030db;
+  transition: 0.3s;
 }
 
 .services-4 img {
-    height: 100px;
-    width: 100px;
+  height: 100px;
+  width: 100px;
 }
 
 .services-4:hover {
-    transform: scale(1.03);
-    cursor: pointer;
+  transform: scale(1.03);
+  cursor: pointer;
 }
 
 .services-5 {
-    border-top: 6px solid #37D6BB;
-    transition: 0.3s;
+  border-top: 6px solid #37d6bb;
+  transition: 0.3s;
 }
 
 .services-5 img {
-    height: 100px;
-    width: 100px;
+  height: 100px;
+  width: 100px;
 }
 
 .services-5:hover {
-    transform: scale(1.03);
-    cursor: pointer;
+  transform: scale(1.03);
+  cursor: pointer;
 }
 
 .services-6 {
-    border-top: 6px solid #1E1584;
-    transition: 0.3s;
+  border-top: 6px solid #1e1584;
+  transition: 0.3s;
 }
 
 .services-6 img {
-    height: 100px;
-    width: 100px;
+  height: 100px;
+  width: 100px;
 }
 
 .services-6:hover {
-    transform: scale(1.03);
-    cursor: pointer;    
+  transform: scale(1.03);
+  cursor: pointer;
 }
 
 .btn-read-more {
-    background-image: linear-gradient(243deg,#3D72E7 0%,#76b1f9 100%);
-    font-size: 12px;
-    letter-spacing: 1px;
-    padding: 15px 30px;
-    font-weight: 800;
-    border-radius: 3px;
-    transition: 0.3s;
+  background-image: linear-gradient(243deg, #3d72e7 0%, #76b1f9 100%);
+  font-size: 12px;
+  letter-spacing: 1px;
+  padding: 15px 30px;
+  font-weight: 800;
+  border-radius: 3px;
+  transition: 0.3s;
 }
 
 .btn-read-more:hover {
-    border-radius: 50px;
+  border-radius: 50px;
 }
 
 .contact {
-    background-color: #F8FBFE;
+  background-color: #f8fbfe;
 }
 
 .icons {
-    height: 40px;
-    width: 40px;
+  height: 40px;
+  width: 40px;
 }
 .address-icons {
-    height: 50px;
-    width: 80px;
+  height: 50px;
+  width: 80px;
 }
 
 /* // Large devices (desktops, less than 1200px) */
-@media (max-width: 1199.98px) { 
-    .hero {
-        background-image: url(/assets/images/hero.png);
-        height: 95vh;
-        background-position: center !important;
-    }
-    .tarseelat-heading {
-        font-size: 60px !important;
-        padding-top: 500px !important;
-    }
- }
-
+@media (max-width: 1199.98px) {
+  .hero {
+    background-image: url(/assets/images/hero.png);
+    height: 95vh;
+    background-position: center !important;
+  }
+  .tarseelat-heading {
+    font-size: 60px !important;
+    padding-top: 500px !important;
+  }
+}
 
 /* // Small devices (landscape phones, less than 768px) */
-@media (max-width: 767.98px) { 
-    .hero {
-        background-image: url(/assets/images/hero.png);
-        height: 95vh;
-        background-position: center !important;
-    }
-    .tarseelat-heading {
-        font-size: 60px !important;
-        padding-top: 160px !important;
-    }
+@media (max-width: 767.98px) {
+  .hero {
+    background-image: url(/assets/images/hero.png);
+    height: 95vh;
+    background-position: center !important;
+  }
+  .tarseelat-heading {
+    font-size: 60px !important;
+    padding-top: 160px !important;
+  }
 
-    .logo {
-        display: none;
-    }
+  .logo {
+    display: none;
+  }
 
-    .mbl-logo {
-        display: block;
-        height: 50px;
-        width: 50px;
-    }
-   
-
- }
-
+  .mbl-logo {
+    display: block;
+    height: 50px;
+    width: 50px;
+  }
+}
